# deep-learning-chollet-3rd-ed

./: .gitattributes  .gitignore  .python-version  Setup.md  chapter02_mathematical-building-blocks.ipynb  chapter03_introduction-to-ml-frameworks.ipynb  chapter04_classification-and-regression.ipynb  chapter05_fundamentals-of-ml.ipynb  chapter07_deep-dive-keras.ipynb  chapter08_image-classification.ipynb  chapter09_convnet-architecture-patterns.ipynb  chapter10_interpreting-what-convnets-learn.ipynb  chapter11_image-segmentation.ipynb  chapter12_object-detection.ipynb  chapter13_timeseries-forecasting.ipynb  chapter14_text-classification.ipynb  chapter15_language-models-and-the-transformer.ipynb  chapter16_text-generation.ipynb  chapter17_image-generation.ipynb  chapter18_best-practices-for-the-real-world.ipynb  nbstripout-config.md  pyproject.toml  req_jax_metal_latest_stable.txt  requirements.txt  requirements_latest.txt  requirements_tf.txt
.githooks/: post-merge
docs/: 01-deep-learning-ecosystem-mapping.md  02-differential-computation-jax-vs-tensorflow-vs-pytorch.md  03-numpy-fancy-indexing-in-deep-learning.md
first_edition/: 2.1-a-first-look-at-a-neural-network.ipynb  3.5-classifying-movie-reviews.ipynb  3.6-classifying-newswires.ipynb  3.7-predicting-house-prices.ipynb  4.4-overfitting-and-underfitting.ipynb  5.1-introduction-to-convnets.ipynb  5.2-using-convnets-with-small-datasets.ipynb  5.3-using-a-pretrained-convnet.ipynb  6.1-one-hot-encoding-of-words-or-characters.ipynb  6.1-using-word-embeddings.ipynb  6.2-understanding-recurrent-neural-networks.ipynb  (+7 more)
(+21 files in other folders)
